--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.4",
+    "@mui/icons-material": "^5.1.1",
     "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.4",
     "@reduxjs/toolkit": "^1.6.2",
@@ -19,13 +19,17 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.1",
     "axios": "^0.23.0",
+    "firebase": "^9.4.1",
     "http-proxy-middleware": "^2.0.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^4.0.1",
+    "react-hook-form": "^7.19.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-social-login-buttons": "^3.6.0",
     "react-transition-group": "^4.4.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
