changed to new environment

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -20,7 +20,7 @@ jobs:
           name: build
           path: build
   deploy:
-    environment: 'Firebase PROD'
+    environment: production
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
