--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.1",
     "axios": "^0.23.0",
+    "dayjs": "^1.10.7",
     "firebase": "^9.4.1",
     "http-proxy-middleware": "^2.0.1",
     "lodash": "^4.17.21",
+    "pretty-bytes": "^5.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
