--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.10.7",
     "firebase": "^9.4.1",
     "lodash": "^4.17.21",
+    "notistack": "^2.0.3",
     "pretty-bytes": "^5.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
